--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,29 +1,52 @@
 .styleForm {
-    display: flex;
-    flex-direction: column;
-    /* gap: 40px; */
-    border: 2px solid black;
-    height: 250px;
-    width: 250px;
+  margin-left: 50px;
+  padding-left: 40px;
+  display: flex;
+  flex-direction: column;
+  /* gap: 40px; */
+  border: 2px solid black;
+  height: 300px;
+  width: 300px;
 }
 
-.inputNameForm {
-    margin-top: 50px;
-    margin-left: 20px;
-    width: 200px;
-    height: 30px;
+.wrapName {
+  margin-top: 20px;
 }
 
-.inputNumberForm {
-    margin: 20px;
-    width: 200px;
-    height: 30px;
+.labelUsername {
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+.usernameForm {
+  margin-left: 20px;
+  width: 200px;
+  height: 30px;
+  /* color: red;
+    font-size: 10px; */
+}
+
+.labelNumber {
+  margin-top: 30px;
+  margin-left: 20px;
+}
+
+.numberForm {
+  margin-left: 20px;
+  width: 200px;
+  height: 30px;
 }
 
 .buttonForm {
-    margin-top: 10px;
-    margin-left: 30px;
-    width: 200px;
-    height: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  width: 200px;
+  height: 50px;
   border: 2px solid black;
+}
+
+.css.error {
+  color: red;
+  font-size: 12px;
 }
