--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -3,7 +3,6 @@
   padding-left: 40px;
   display: flex;
   flex-direction: column;
-  /* gap: 40px; */
   border: 2px solid black;
   height: 300px;
   width: 300px;
@@ -15,31 +14,27 @@
 
 .labelUsername {
   margin-top: 50px;
-  margin-left: 20px;
 }
 
 .usernameForm {
-  margin-left: 20px;
-  width: 200px;
+  display: flex;
+  width: 250px;
   height: 30px;
-  /* color: red;
-    font-size: 10px; */
 }
 
-.labelNumber {
-  margin-top: 30px;
-  margin-left: 20px;
+.wrapNumber {
+  margin-top: 20px;
 }
 
 .numberForm {
-  margin-left: 20px;
-  width: 200px;
+  display: flex;
+  width: 250px;
   height: 30px;
 }
 
 .buttonForm {
   margin-top: 30px;
-  margin-bottom: 30px;
+  /* margin-bottom: 90px; */
   margin-left: 20px;
   width: 200px;
   height: 50px;
